--- a/stories/header.css
+++ b/stories/header.css
@@ -7,23 +7,23 @@
   justify-content: space-between;
 }
 
-svg {
+/* svg {
   display: inline-block;
   vertical-align: top;
-}
+} */
 
-h1 {
+/* h1 {
   font-weight: 900;
   font-size: 20px;
   line-height: 1;
   margin: 6px 0 6px 10px;
   display: inline-block;
   vertical-align: top;
-}
+} */
 
-button + button {
+/* button + button {
   margin-left: 10px;
-}
+} */
 
 .welcome {
   color: #333;
