--- a/stories/page.css
+++ b/stories/page.css
@@ -1,4 +1,4 @@
-section {
+/* section {
   font-family: 'Nunito Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-size: 14px;
   line-height: 24px;
@@ -33,7 +33,7 @@ section ul {
 
 section li {
   margin-bottom: 8px;
-}
+} */
 
 section .tip {
   display: inline-block;
